@@ -120,7 +120,7 @@ namespace libtorrent
 			m_man.host_resolver().async_resolve(hostname
 				, tracker_req().event == tracker_request::stopped
 					? resolver_interface::prefer_cache
-					: 0
+					: resolver_interface::abort_on_shutdown
 				, boost::bind(&udp_tracker_connection::name_lookup
 					, shared_from_this(), _1, _2, port));
 
